# 2D-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: definitions.h  main.cpp
src/core/: engine.cpp  engine.h
src/entities/: player.h
